PLT-3873 - Fixing docs navigation bar on mobile

--- a/source/theme.css
+++ b/source/theme.css
@@ -253,4 +253,7 @@ header .header__links li a {
 		max-width: 100%;
 		width: auto;
 	}
+	.wy-nav-top {
+	    margin-top: 70px;
+	}
 }
